...
        android:layout_alignParentStart="true"
        android:layout_marginTop="76dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="REGISTER"
        android:id="@+id/btnRegister"
        android:layout_marginTop="43dp"
        android:layout_below="@+id/btnLogin"
        android:layout_alignParentStart="true" />
<!--
    <Button
        android:layout_width="match_parent"
...
